overflow fix prizes and memories

--- a/src/index.css
+++ b/src/index.css
@@ -179,3 +179,10 @@ background: var(--Shocking-Orange, linear-gradient(308deg, #DD6843 25.02%, #F0A3
     background-color: #f9f9f9;
   }
 }
+
+
+.memories {
+  @media (max-width: 1240px) {
+    display: none;
+  }
+}
